# AR_Butler

./: .breakpoints  changes  keep_alive.py  main.py  nifty-expanse-322112-bd87c03b16c7.json  pyproject.toml
cogs/: GuildData.py  guild_data.py  rank_module.py  scholar_aggregate_gsheets.py  scholar_data.py  scrape.py  scrape_aggregate.py
