[tool.poetry]
name = "repl_python3_ARButler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gspread = "^4.0.0"
pandas = "^1.3.1"
schedule = "^1.1.0"
Flask = "^2.0.1"
discord = "^1.7.3"
selenium = "^3.141.0"
beautifulsoup4 = "^4.10.0"
urllib3 = "^1.26.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
